# new-active

./: .gitignore  Active.hs  IApplicative.hs  active.cabal  notes.org  stack.yaml
src/: Active.hs  Animation.hs  Test.hs  Test2.hs  tutorial.hs
src/Active/: Duration.hs
src/Control/: IApplicative.hs
src/Data/: Active.hs  Duration.hs  Finitude.hs
src/old/: Test2.hs  tutorial.hs
