name:                active
version:             0.3
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          byorgey@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Control.IApplicative, Data.Active, Data.Finitude
  -- other-modules:
  other-extensions:    ConstraintKinds, DataKinds, FlexibleContexts, FlexibleInstances, GADTs, KindSignatures, MultiParamTypeClasses, PolyKinds, RankNTypes, StandaloneDeriving, TypeFamilies, TypeOperators, UndecidableInstances
  build-depends:       base >=4.8 && <4.10,
                       semigroups >= 0.18,
                       vector >= 0.11,
                       split >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010